update: добавлена кнопка регистрации, и подправлены остальные функции

--- a/client/src/main/resources/main.fxml
+++ b/client/src/main/resources/main.fxml
@@ -10,16 +10,29 @@
 <VBox alignment="center" xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="controllers.MainController"
-      prefHeight="400.0" prefWidth="600.0">
+      prefHeight="400.0" prefWidth="600.0" fx:id="mainWindow" style="-fx-background-color: #f2e8c9">
 
-    <VBox fx:id="loginBox" alignment="CENTER" style=" -fx-border-color:black; -fx-border-width: 1; -fx-border-style: solid;">
-        <Label fx:id="loginLabel" textFill="red"/>
-        <Label text="Введите логин"/>
-        <TextField fx:id="loginField" HBox.hgrow="ALWAYS" maxWidth="300" onAction="#btnLoginAction"/>
-        <Label text="Пароль:" />
-        <PasswordField fx:id="passwordField" HBox.hgrow="ALWAYS" maxWidth="300" onAction="#btnLoginAction"/>
-        <HBox spacing="5" alignment="CENTER">
-            <Button text="Войти" HBox.hgrow="ALWAYS" onAction="#btnLoginAction"/>
+    <VBox fx:id="loginBox" VBox.vgrow="ALWAYS" spacing="10" alignment="CENTER" >
+        <Label fx:id="loginLabel" textFill="red" />
+        <TextField fx:id="loginField" focusTraversable="false" promptText="Введите логин" HBox.hgrow="ALWAYS" maxWidth="200" onAction="#btnLoginAction" />
+        <PasswordField fx:id="passwordField" focusTraversable="false" promptText="Введите пароль" HBox.hgrow="ALWAYS" maxWidth="200" onAction="#btnLoginAction"/>
+        <HBox spacing="10" alignment="CENTER">
+            <Button text="Войти" HBox.hgrow="ALWAYS" onAction="#btnLoginAction" style=" -fx-background-color: #b38349"/>
+            <Button text="Регистрация" HBox.hgrow="ALWAYS" onAction="#btnRegAction" style=" -fx-background-color: #b38349"/>
+        </HBox>
+        <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+        </padding>
+    </VBox>
+
+    <VBox fx:id="regBox" VBox.vgrow="ALWAYS" spacing="10" alignment="CENTER" visible="false" managed="false">
+        <Label fx:id="regLabel" textFill="red" />
+        <TextField fx:id="newLoginField" focusTraversable="false" promptText="Введите логин" HBox.hgrow="ALWAYS" maxWidth="200" onAction="#btnReg" />
+        <PasswordField fx:id="firstPasswordField" focusTraversable="false" promptText="Введите пароль" HBox.hgrow="ALWAYS" maxWidth="200" onAction="#btnReg"/>
+        <PasswordField fx:id="secondPasswordField" focusTraversable="false" promptText="Повторите пароль" HBox.hgrow="ALWAYS" maxWidth="200" onAction="#btnReg"/>
+        <HBox spacing="10" alignment="CENTER">
+            <Button text="Регистрация" HBox.hgrow="ALWAYS" onAction="#btnReg" style=" -fx-background-color: #b38349"/>
+            <Button text="Назад" HBox.hgrow="ALWAYS" onAction="#btnBack" style=" -fx-background-color: #b38349"/>
         </HBox>
         <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
@@ -32,16 +45,17 @@
     </HBox>
 
     <HBox fx:id="buttonBlock" spacing="5" visible="false" managed="false">
-        <Button maxWidth="Infinity" focusTraversable="false" text="Скачать файл" HBox.hgrow="ALWAYS" onAction="#btnDownloadAction"/>
-        <Button maxWidth="Infinity" focusTraversable="false" text="Отправить файл" HBox.hgrow="ALWAYS" onAction="#btnUploadAction"/>
-        <Button maxWidth="Infinity" focusTraversable="false" text="Создать папку" HBox.hgrow="ALWAYS" onAction="#btnCreateFolderAction"/>
-        <Button maxWidth="Infinity" focusTraversable="false" text="Обновить список" HBox.hgrow="ALWAYS" onAction="#btnUpdateAction"/>
-        <Button maxWidth="Infinity" focusTraversable="false" text="Удалить файл" HBox.hgrow="ALWAYS" onAction="#btnDeleteAction"/>
+        <Button maxWidth="Infinity" focusTraversable="false" text="Скачать файл" HBox.hgrow="ALWAYS" onAction="#btnDownloadAction" style="-fx-background-color: #b38349"/>
+        <Button maxWidth="Infinity" focusTraversable="false" text="Отправить файл" HBox.hgrow="ALWAYS" onAction="#btnUploadAction" style="-fx-background-color: #b38349"/>
+<!--        <Button maxWidth="Infinity" focusTraversable="false" text="Создать папку" HBox.hgrow="ALWAYS" onAction="#btnCreateFolderAction" style="-fx-background-color: #b38349"/>-->
+        <Button maxWidth="Infinity" focusTraversable="false" text="Обновить список" HBox.hgrow="ALWAYS" onAction="#btnUpdateAction" style="-fx-background-color: #b38349"/>
+        <Button maxWidth="Infinity" focusTraversable="false" text="Удалить файл" HBox.hgrow="ALWAYS" onAction="#btnDeleteAction" style="-fx-background-color: #b38349"/>
         <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
         </padding>
     </HBox>
     <ProgressBar maxWidth="Infinity" fx:id="progressBar" visible="false" managed="false"/>
-    <Button maxWidth="Infinity" focusTraversable="false" text="Выход из программы" HBox.hgrow="ALWAYS" onAction="#btnExitAction"/>
+
+    <Button focusTraversable="false" text="Выход из программы" onAction="#btnExitAction" style=" -fx-background-color: #b38349"/>
 
 </VBox>
